--- a/CSS/app.css
+++ b/CSS/app.css
@@ -72,7 +72,7 @@
 body{
     background-color: #f5faf6;
     font-family: "Poppins", serif;
-    
+    overflow-x: hidden;
 }
 /* ---Nabigation----- */
 
