--- a/CSS/app.css
+++ b/CSS/app.css
@@ -78,7 +78,7 @@ body{
   margin-inline: auto;
   width: 90%;
   overflow-x: hidden;
-  scroll-snap-type: mandatory;
+  scroll-snap-type: none;
 }
 /* ---Nabigation----- */
 
@@ -278,7 +278,7 @@ a:hover{
   left: 0;
   top: 0;
   right: 0;
-  z-index: -4;
+  z-index: -1;
   mix-blend-mode:normal;
  
  
@@ -287,7 +287,7 @@ a:hover{
 }
 .apply{
   min-height: 150px;
-  max-width: 250px;
+  max-width: 200px;
   border-radius: 50%;
   background-color: #99c4b5;
   position: relative;
