--- a/CSS/app.css
+++ b/CSS/app.css
@@ -38,7 +38,7 @@
     /*=============== fontsize ==============  */
     --text-sm: 1.2rem;
     --text-base: 1.6rem;
-    --text-paragraph: clamp(1.5em, 2vw, 4em);;
+    --text-paragraph: clamp(1.5em, 5vw, 2em);
     --text-h5: 2.4rem;
     --text-h4: 3.2rem;
     --text-h3:  4.0rem;
@@ -70,10 +70,13 @@
         font-size: 62.5%;
       }
 body{
+   
     background-color: #f5faf6;
     font-family: "Poppins", serif;
     
+    
 }
+
 
 /* ---Nabigation----- */
 
@@ -212,7 +215,7 @@ a:hover{
 .hero-section{
   max-width: 90%;
   margin-inline: auto;
-  height: 70vh;
+  height: 100vh;
   position: relative;
 }
 .about{
@@ -222,13 +225,14 @@ a:hover{
   transition: .5s ease-in;
 }
  .bout::before{
-  content: '✅';
+  content: '☑️';
 }
 .hero-section p{
   color: var(--pallete-6);
   font-weight: var(--font-weight-bold);
   margin-top: 10px;
   margin-bottom: 20px;
+
 }
 .hero-section  h1{
   font-size: var(--text-h1);
@@ -237,7 +241,23 @@ a:hover{
 .sh{
   font-size: var(--text-h1);
 }
+.down{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  cursor: pointer;
+  animation: pointdown 1000ms infinite alternate-reverse;
+  transition: .3s ease-in;
 
+}
+@keyframes pointdown{
+  0%{
+    transform: translateY(0);
+  }
+  100%{
+    transform: translateY(16px);
+  }
+}
  .hero-img{
   position: absolute;
   top: 0;
@@ -259,22 +279,24 @@ a:hover{
 /* --------WHYUS---------- */
 .why-us{
   max-width: 90%;
+  margin-inline: auto;
   margin-top: 350px;
   height: 100vh;
-  margin-inline: auto;
+  
   position: relative;
   transition: .5s ease-in;
  
 }
 .back{
   position: absolute;
-  width:100%;
+  width: 100vw;
   height: 100%;
   left: 0;
   top: 0;
   right: 0;
-  z-index: -1;
-  mix-blend-mode:normal;
+  bottom: 0;
+  z-index: -3;
+  mix-blend-mode:color-burn;
  
  
   
@@ -322,7 +344,7 @@ a:hover{
   left: 0;
   bottom: 0;
   padding: 2.0rem;
-  width: 90%;
+  width: 80%;
   background-color:#99c4b5;
   border-radius: 0 18px 18px 0;
   opacity: 0.9;
@@ -346,7 +368,7 @@ a:hover{
 
 }
 #innertext{
-  font-size: clamp(1em, 1vw, 3em);
+  font-size: clamp(1.5em, 1vw, 3em);
 }
 /* ---------TESTIMONIAL------- */
 .testcontainer{
@@ -379,6 +401,7 @@ a:hover{
 }
 .testimonial p{
   font-size: var(--text-paragraph);
+  
 }
 .avatar{
   position: absolute;
@@ -537,7 +560,18 @@ input{
     
   
   }
+  .container{
+    overflow-x: auto;
+   }
+   .down{
+    position: absolute;
+    bottom: -25%;
+    left: 50%;
+    cursor: pointer;
+    animation: pointdown 1000ms infinite alternate-reverse;
+    transition: .3s ease-in;
   
+  }
   
 
   
