--- a/CSS/app.css
+++ b/CSS/app.css
@@ -237,9 +237,13 @@ a:hover{
 .hero-section  h1{
   font-size: var(--text-h1);
   display: inline-block;
+  color: var(--pallete-1);
+ 
 }
 .sh{
   font-size: var(--text-h1);
+  font-weight: var(--font-weight-bold);
+  
 }
 .down{
   position: absolute;
@@ -289,7 +293,7 @@ a:hover{
 }
 .back{
   position: absolute;
-  width: 100vw;
+  width: 90vw;
   height: 100%;
   left: 0;
   top: 0;
@@ -348,6 +352,7 @@ a:hover{
   background-color:#99c4b5;
   border-radius: 0 18px 18px 0;
   opacity: 0.9;
+  z-index: 2;
   
   
 }
@@ -356,15 +361,16 @@ a:hover{
 .representative::after{
   
   height: 110%;
-  width: 101%;
+  max-width: 800px;
   content: '';
   background: #eaebe5;
   position: absolute;
   border-radius: 0 18px 18px 0;
-  z-index: -1;
+  z-index: -2;
   top: -5%;
   right: -15%;
   left: 0;
+  opacity: 0.8;
 
 }
 #innertext{
@@ -478,36 +484,37 @@ a:hover{
 .apply-head{
   margin-top: 150px;
   max-width: 90%;
-  margin-right: 50px;
+  margin-inline: auto;
   background-color: var(--pallete-7);
-  min-height: 400px;
+  min-height: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   border-radius: 0px 158px 0  0 ;
-  box-shadow: 16px 19px 15px rgb(17, 16, 16);
+  box-shadow: 6px 9px 15px rgb(17, 16, 16);
 }
 #fee{
   background-color: var(--pallete-16);
   padding: 2.0rem;
+  font-size: clamp(0.3em,3vw,8em);
+  
 }
-.fill-up{
-  max-width: 90%;
-  margin-right: 50px;
-  background-color:var(--pallete-7) ;
+
+.apply-head h2{
+  font-size: clamp(0.3em,3vw,8em);
+  
+}
+.form-group{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  box-shadow: 15px 18px 15px rgb(17, 16, 16);
-}
-.apply-head h2{
-  font-size: clamp(.3em,5vw,8em);
-}
-.form-group{
   
-  gap: 150px;
+}
+#loan-form{
+  width: 90%;
+  margin-inline: auto;
 }
 input{
   font-size: 2.4rem;
@@ -515,10 +522,11 @@ input{
 
 }
 .btn-tertiary{
-  background-color: #4165D5;
+  display: inline-flex;
+  background-color: #00ffff;
   padding: 1.0rem 1.5rem;
-  margin: 20px 65%;
-  border-radius: 1.5rem;
+  border-radius: 8px;
+  border: none;
 }
 .result{
   display: none;
